unpackaged/main/default/objects/Cost_Period__c/Cost_Period__c.object-meta.xml
<CustomObject>
    <label>Cost Period</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Cost Period ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>