unpackaged/main/default/objects/Cost_Period__c/fields/AFE__c.field-meta.xml
<CustomField>
    <fullName>AFE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AFE</label>
    <referenceTo>AFE__c</referenceTo>
    <relationshipLabel>Cost Periods</relationshipLabel>
    <relationshipName>Cost_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>