unpackaged/main/default/objects/Cost_Period__c/fields/AFE_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>AFE_Actual_Cost__c</fullName>
    <label>AFE Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>