unpackaged/main/default/objects/Cost_Period__c/fields/AFE_Description__c.field-meta.xml
<CustomField>
    <fullName>AFE_Description__c</fullName>
    <description>This box will contain notes around AFEs</description>
    <label>AFE Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>