unpackaged/main/default/objects/Cost_Period__c/fields/AFE_Number__c.field-meta.xml
<CustomField>
    <fullName>AFE_Number__c</fullName>
    <label>AFE Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>