unpackaged/main/default/objects/Cost_Period__c/fields/COA_Category__c.field-meta.xml
<CustomField>
    <fullName>COA_Category__c</fullName>
    <label>COA Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHEMICALS &amp; SUPPLIES</fullName>
            </value>
            <value>
                <fullName>CONTRACT SERVICES &amp; LABOR</fullName>
            </value>
            <value>
                <fullName>ENERGY AND FUEL</fullName>
            </value>
            <value>
                <fullName>ESG</fullName>
            </value>
            <value>
                <fullName>FIELD OFFICE EXPENSE</fullName>
            </value>
            <value>
                <fullName>MAINTENANCE</fullName>
            </value>
            <value>
                <fullName>MAJOR REPAIRS</fullName>
            </value>
            <value>
                <fullName>PAWNEE PLANT</fullName>
            </value>
            <value>
                <fullName>PRODUCTION EXPENSE</fullName>
            </value>
            <value>
                <fullName>SALT WATER DISPOSAL</fullName>
            </value>
            <value>
                <fullName>WELL SERVICES</fullName>
            </value>
            <value>
                <fullName>CAPEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>