unpackaged/main/default/objects/Cost_Period__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cost Periods</relationshipLabel>
    <relationshipName>Cost_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>