unpackaged/main/default/objects/Cost_Period__c/fields/Cost_Period_Line_Item_Total__c.field-meta.xml
<CustomField>
    <fullName>Cost_Period_Line_Item_Total__c</fullName>
    <label>Maintenance Cost Period Line Item Total</label>
    <summarizedField>Cost_Period_Line_Item__c.Cost__c</summarizedField>
    <summaryForeignKey>Cost_Period_Line_Item__c.Cost_Period__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>