unpackaged/main/default/objects/Cost_Period__c/fields/Forecasted_Cost__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Cost__c</fullName>
    <label>AFE Forecasted Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>