unpackaged/main/default/objects/Cost_Period__c/fields/Month_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_End_Date__c</fullName>
    <formula>IF(
  MONTH(  Week_of__c ) = 12,
  DATE( YEAR(  Week_of__c ), 12, 31 ),
  DATE( YEAR(  Week_of__c ), MONTH (  Week_of__c ) + 1, 1 ) - 1 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month End Date</label>
    <type>Date</type>
</CustomField>