unpackaged/main/default/objects/Cost_Period__c/fields/Week_of__c.field-meta.xml
<CustomField>
    <fullName>Week_of__c</fullName>
    <label>AFE Month</label>
    <type>Date</type>
</CustomField>