unpackaged/main/default/objects/Cost_Period__c/fields/Work_Order_Cost__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Cost__c</fullName>
    <label>ALS Work Order Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>