unpackaged/main/default/objects/Cost_Period__c/fields/Work_Order_Cost_Total__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Cost_Total__c</fullName>
    <formula>VALUE( Work_Order_Cost__c ) +  Cost_Period_Line_Item_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>