unpackaged/main/default/objects/Cost_Period__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Week_of__c</columns>
    <columns>COA_Category__c</columns>
    <columns>COA__c</columns>
    <columns>AFE_Description__c</columns>
    <columns>AFE_Number__c</columns>
    <columns>Forecasted_Cost__c</columns>
    <columns>Actual_Cost__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>