unpackaged/main/default/objects/Cost_Period__c/listViews/All_Maintenance_Cost_Entries.listView-meta.xml
<ListView>
    <fullName>All_Maintenance_Cost_Entries</fullName>
    <columns>NAME</columns>
    <columns>COA__c</columns>
    <columns>COA_Category__c</columns>
    <columns>Week_of__c</columns>
    <columns>AFE_Number__c</columns>
    <columns>AFE_Description__c</columns>
    <columns>Forecasted_Cost__c</columns>
    <columns>Actual_Cost__c</columns>
    <columns>Cost_Period_Line_Item_Total__c</columns>
    <columns>Work_Order_Cost_Total__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>COA_Category__c</field>
        <operation>equals</operation>
        <value>MAINTENANCE,FIELD OFFICE EXPENSE</value>
    </filters>
    <filters>
        <field>Week_of__c</field>
        <operation>greaterThan</operation>
        <value>10/1/2020</value>
    </filters>
    <label>All Maintenance Cost Entries</label>
</ListView>