unpackaged/main/default/objects/Cost_Period__c/listViews/CAPEX.listView-meta.xml
<ListView>
    <fullName>CAPEX</fullName>
    <columns>AFE_Description__c</columns>
    <columns>AFE_Number__c</columns>
    <columns>Week_of__c</columns>
    <columns>NAME</columns>
    <columns>COA__c</columns>
    <columns>Forecasted_Cost__c</columns>
    <columns>Cost_Period_Line_Item_Total__c</columns>
    <columns>Work_Order_Cost_Total__c</columns>
    <columns>COA_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>COA_Category__c</field>
        <operation>equals</operation>
        <value>CAPEX</value>
    </filters>
    <label>CAPEX</label>
</ListView>