unpackaged/main/default/objects/Cost_Period__c/listViews/Maintenance_last_month.listView-meta.xml
<ListView>
    <fullName>Maintenance_last_month</fullName>
    <columns>AFE_Number__c</columns>
    <columns>Week_of__c</columns>
    <columns>NAME</columns>
    <columns>COA__c</columns>
    <columns>Forecasted_Cost__c</columns>
    <columns>Cost_Period_Line_Item_Total__c</columns>
    <columns>Work_Order_Cost_Total__c</columns>
    <columns>COA_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Week_of__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <filters>
        <field>COA_Category__c</field>
        <operation>equals</operation>
        <value>MAINTENANCE</value>
    </filters>
    <label>Maintenance - Last Month</label>
</ListView>