unpackaged/main/default/objects/Cost_Period__c/listViews/Next_Month.listView-meta.xml
<ListView>
    <fullName>Next_Month</fullName>
    <columns>AFE_Number__c</columns>
    <columns>Week_of__c</columns>
    <columns>NAME</columns>
    <columns>COA__c</columns>
    <columns>Forecasted_Cost__c</columns>
    <columns>Cost_Period_Line_Item_Total__c</columns>
    <columns>Work_Order_Cost_Total__c</columns>
    <columns>COA_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Week_of__c</field>
        <operation>equals</operation>
        <value>NEXT_MONTH</value>
    </filters>
    <filters>
        <field>COA_Category__c</field>
        <operation>equals</operation>
        <value>MAINTENANCE</value>
    </filters>
    <label>Maintenance - Next Month</label>
</ListView>