unpackaged/main/default/objects/Cost_Period__c/listViews/North_Cost_Input.listView-meta.xml
<ListView>
    <fullName>North_Cost_Input</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>North</value>
    </filters>
    <label>North Cost Input</label>
</ListView>