unpackaged/main/default/objects/Cost_Period__c/listViews/Production_Next_Month.listView-meta.xml
<ListView>
    <fullName>Production_Next_Month</fullName>
    <columns>NAME</columns>
    <columns>Week_of__c</columns>
    <columns>COA__c</columns>
    <columns>Forecasted_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Week_of__c</field>
        <operation>equals</operation>
        <value>NEXT_MONTH</value>
    </filters>
    <filters>
        <field>COA_Category__c</field>
        <operation>notEqual</operation>
        <value>MAINTENANCE</value>
    </filters>
    <label>Production - Next Month</label>
</ListView>